[project]
name = "msdb"
version = "0.1.0"
description = "API client to interact with MatsolverDB"
authors = [
    {name = "geonda",email = "a.geondzhian@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonpickle (>=4.1.1,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
